cluster/mutatingwebhookconfiguration-envoy-gateway-topology-injector.envoy-gateway-system.yaml
# Source: envoy-gateway
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: envoy-gateway-topology-injector.envoy-gateway-system
  labels:
    app.kubernetes.io/component: topology-injector
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/version: v1.7.0
webhooks:
- name: topology.webhook.gateway.envoyproxy.io
  admissionReviewVersions:
  - v1
  sideEffects: None
  clientConfig:
    service:
      name: envoy-gateway
      namespace: envoy-gateway-system
      path: /inject-pod-topology
      port: 9443
  failurePolicy: Ignore
  rules:
  - operations:
    - CREATE
    apiGroups:
    - ''
    apiVersions:
    - v1
    resources:
    - pods/binding
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: In
      values:
      - envoy-gateway-system
